# shared/api/specification/api_specification.yaml
@@ -3214,7 +3214,7 @@ components:
 
         SearchAccountResult:
             type: object
-            required: [title, bodyMatch, type, id]
+            required: [title, bodyMatch, type, id, shortName]
             additionalProperties: false
             properties:
                 title:
@@ -3227,6 +3227,8 @@ components:
                     const: Account
                 id:
                     $ref: "#/components/schemas/AccountId"
+                shortName:
+                    $ref: "#/components/schemas/LabelString"
                 # NOCOMMIT: Make sure we return `botId` when returning an account target! Mentions + search results.
                 botId:
                     $ref: "#/components/schemas/BotId"
